Re-organize KiwiListsTest to use @Nested per method under test